# auditX

./: .env.example  .gitignore  QUICKSTART.md  README.md  app.py  project (1).xlsx  pyproject.toml  requirements.txt  ~$project (1).xlsx
financial_mapper/: __init__.py  aggregator.py  config.py  gst_searcher.py  gstin_validator.py  hierarchy_builder.py  llm_hf.py  llm_ratio_calculator.py  mapper.py  normalizer.py  pdf_parser.py  pipeline.py  ratio_engine.py  synonym_mapper.py  synonyms.py  validation.py  validator.py
knowledge/: GOVT_SCH.docx  KEY FINANCIAL INDICATORS ke ideal.docx  Synonyms of names in balance sheet.docx  govt_sch.txt  ~$VT_SCH.docx
static/: style.css
templates/: base.html  gst_search.html  index.html  results.html  results_multi_year.html  results_multi_year_new.html  results_new.html
web/: ratio_calculator.py
