[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-mapper"
version = "1.0.0"
description = "Semantic financial extraction engine — maps inconsistent balance sheet labels to a standardised schema."
requires-python = ">=3.10"
dependencies = [
    "rapidfuzz>=3.0.0",
    "openpyxl>=3.0.0",
    "flask>=2.0.0",
    "pandas>=1.5.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "huggingface-hub>=0.17.0",
    "pdfplumber>=0.10.0",
    "selenium>=4.0.0",
]

[project.optional-dependencies]
pandas = ["pandas>=1.5.0"]
dev = [
    "pytest>=7.0.0",
    "pandas>=1.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["financial_mapper*", "web*"]
exclude = ["tests*", "static*", "templates*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
